[fix] Add overflow in wrappers

--- a/src/assets/scss/layout/_app.scss
+++ b/src/assets/scss/layout/_app.scss
@@ -1,6 +1,7 @@
 .content-wrapper {
   display: flex;
   height: 100vh;
+  overflow: auto;
 }
 
 .app-logo {
